<resources>
    <string name="app_name">MiTravels</string>
    <string name="description">Description:</string>
    <string name="new_adventure">Create a new Journey</string>
    <string name="home">Home</string>
    <string name="journal">Journal</string>
    <string name="places">Places</string>
    <string name="map">Map</string>
    <string name="general">General</string>
    <string name="start_date">Started:</string>
    <string name="start_recording">Start Journey</string>
    <string name="end_recording">End Journey</string>
    <string name="continue_recording">Continue Recording</string>
    <string name="end_date">Completed:</string>
    <string name="create_journal_entry">Journal Entry</string>
    <string name="journal_title">Title</string>
    <string name="journal_text">Add you Journal details…</string>
    <string name="trip_title_hint">Enter a name for this new Journey</string>
    <string name="trip_description_hint">Write a description about this Journey</string>
    <string name="trip_description">Description</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="day_no">Day %d</string>
    <string name="no_street">Unknown location</string>
    <string name="no_suburb">(Check internet connection)</string>
    <string name="date_started">Started: %s</string>
    <string name="date_ended">Finished: %s</string>
    <string name="not_started">Not Yet Started</string>
    <string name="going_for">Going for %d Days!</string>
    <string name="gps_checkbox">Follow your route on the map with GPS</string>
    <string name="status">Status:</string>
    <string name="view_journals">View Journal Entries</string>
    <string name="still_not_complete">(Still In Progress)</string>
    <string name="start_instructions">Tap the record button below to begin..</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="close">Close</string>
    <string name="error_no_title">You must provide a Title for this new Journey</string>
    <string name="ru_sure_delete_trip">Are you sure you want to delete this Journey?</string>
    <string name="ru_sure_delete_journal">Are you sure you want to delete this Journal entry?</string>
    <string name="journal_deleted">Journal entry has been deleted...</string>
    <string name="exit_no_save">You have not Saved this project.\n\nWould you like to Save before Leaving?</string>
    <string name="delete_trip">Delete Journey</string>
    <string name="change_main_photo">Change Main Photo</string>
    <string name="view_photos">View all photos</string>
    <string name="no_photo">No Photos Added for this journey as yet!</string>
    <string name="create">Create</string>
    <string name="select">Select</string>
    <string name="remove">Remove</string>
    <string name="filter">Show: </string>
    <string name="all_trip">Entire Trip</string>
    <string name="events">Events</string>
    <string name="legend">Legend</string>
    <string name="title_activity_dlg_filter">DlgFilter</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="select_filter">Select a Day for Viewing..</string>
    <string name="view_routes_on_the_map">View Routes on the map</string>
    <string name="view_events_on_the_map">View events on the map</string>
    <string name="view_activities_for">Viewing: Day %d %s</string>
    <string name="save">Save</string>
    <string name="lastgps">%s Last GPS at %s</string>
    <string name="notificationmessage">Monitoring: %s</string>
    <string name="delete_journal_entry">Delete Journal Entry</string>
    <string name="edit_map_location">Edit map location</string>
    <string name="long_tap_new_loc">Tap on a new location..</string>
    <string name="select_type_of_journal_entry">Type entry:</string>
    <string name="show_journal_entry_on_map">Show this Journal entry on the Map</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate us</string>
    <string name="intro">View Introduction</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_this_app">About this app</string>
    <string name="version_s">Version %s</string>
    <string name="app_description">App Description</string>
    <string name="app_description_details">This app is specifically designed to help you remember those magic moments in your life.\n\nWhether these occur when you are travelling on vacation, or just living your day to day life.\n\nMiTravels will help you keep a track of those events through journals, routes and photos.</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_statement">MiTravels is specifically designed to provide 100% privacy of all your content.\n\nYou will be the only person that can view your content.\n\nAll the data and journals that you enter are stored locally on your device and not uploaded anywher to the internet unless you specifically request this to happen through any share or backup feature (coming soon.)

</string>
    <string name="ask_for_permission">MiTravels collects Your location data when you start a Journey, even when the App is closed or not in use.\n\nThis data is used so that you can follow your Journeys on our interactive Map.\n\nPlease select Allow on the following Permission dialogs to get the benefit from MiTravels.</string>
    <string name="ask_for_permission_title">Permissions</string>
    <string name="credits">Credits</string>
    <string name="credt1">Adrianna Calvo Cover Photo in Splash Screen (pexels.com)\nJess Bailey Designs (pexels.com)\nhttps://www.pexels.com/@jessbaileydesign\n\nIcons:\nfreepik(www.freepik.com) from www.flaticon.com
    \nsmalllikeart (https://www.flaticon.com/authors/smalllikeart)
    </string>
    <string name="first_journey">Create your first Journey.\n\nDon\'t let those memories\nbe forgotten...</string>
    <string name="first_journal">Tap below to add your first journal entry...</string>
    <string name="tap_here_to_begin">Tap here to Begin...</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="gps_header">GPS</string>
    <string name="gps_title">Sensitivity of GPS measurement</string>
    <string name="gps_descr">Set the accuracy of GPS measurement. This attribute determines how often to mark a gps entry. The lower the number, the higher the accuracy, but will use more battery power</string>
    <string name="sort_header">Sort Order for Lists</string>
    <string name="sort_Journeys">Sort Order for Journeys list</string>
    <string name="sort_Journeys_descr">Choose the order that you would like to sort your journeys in the home screen</string>
    <string name="sort_Journal">Sort Order for Journal entries</string>
    <string name="sort_Journal_descr">Choose the order that you would like to sort your journal entries in th ehournal screen</string>
    <string name="no_gps">Tap to turn Location on to monitor your Journey.</string>

    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_progress">Backing up your Journeys</string>
    <string name="restore_progress">Restoring your Journeys</string>
    <string name="bkp_prepare">Preparing Backup...</string>
    <string name="restore_prepare">Preparing for Restore...</string>
    <string name="bkp_upload">Uploading files...</string>
    <string name="restore_download">Restoring files...</string>
    <string name="restore_import">Importing data...</string>
    <string name="bkp_complete">Backup Complete!</string>
    <string name="restore_complete">Restore Complete!</string>
    <string name="places_descr">As your journey grows this section will show you a record of all the places that you have been to!</string>

    <!-- Preference Titles -->
    <string name="reply_title">Default reply action</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="lets_start">Lets Start</string>
    <string name="loading_map">Loading Map...</string>

    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="driving">Driving</string>
    <string name="walking">Walking</string>
    <string name="flight">Flight</string>

    <string name="title_activity_restore_progress">RestoreProgress</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="trip_status_array">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Paused</item>
        <item>Completed</item>
    </string-array>
    <string-array name="trip_instructions">
        <item>Tap the Start button above to begin recording this Journey</item>
        <item>Tap the End Button above to stop recording activities for this journey</item>
        <item>Paused</item>
        <item>If you would like to continue recording this Journey tap the Continue button above.</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="event_types_array">
        <item>Thoughts</item>
        <item>Flight</item>
        <item>Meal</item>
        <item>Relaxing</item>
        <item>Exploring</item>
        <item>Accommodation</item>
        <item>Shopping</item>
        <item>Travel</item>
        <item>Business</item>
        <item>Work</item>
        <item>Sport</item>
        <item>Excercise</item>
        <item>Hiking</item>
        <item>Social</item>
        <item>Fun</item>
    </string-array>

    //
    // Banner stuff
    <string name="banner_app_id">ca-app-pub-3709500405205625~3592890721</string>
    <!--    TEST ACCOUNTS  -->
    <string name="banner_id1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_id2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_id3">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_id4">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_id5">ca-app-pub-3940256099942544/6300978111</string>
    <!--    LIVE ACCOUNTS  -->
    <!--    <string name="banner_id1">ca-app-pub-3709500405205625/8706434841</string>-->
    <!--    <string name="banner_id2">ca-app-pub-3709500405205625/6310020575</string>-->
    <!--    <string name="banner_id3">ca-app-pub-3709500405205625/8276640109</string>-->
    <!--    <string name="banner_id4">ca-app-pub-3709500405205625/5996099305</string>-->
    <!--    <string name="banner_id5">ca-app-pub-3709500405205625/5320485842</string>-->

</resources>
