<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/g1">
        <item android:id="@+id/menu_about"
            android:title="@string/about"
            android:icon="@drawable/info"
        />
        <item android:id="@+id/menu_settings"
            android:title="@string/settings"
            android:icon="@drawable/settings"
            />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/g2">
        <item android:id="@+id/menu_intro"
            android:title="@string/intro"
            android:icon="@drawable/intro"
            />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/g3">
        <item android:id="@+id/menu_privacy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/privacy"
            />
    </group>

</menu>

<!--    -->